# lore-graph

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/: manifest.json
lore_graph/: extraction.py  loader.py  parsing.py  pipeline.py
schema/: lore_graph_schema.cypher
tests/: test_validation.py
